--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <title>websites</title>
 <h1>beautiful</h1>
-<p>xD never i ever</p>
+<p>did you now anything about the code?</p>
 
 <p> dpoppipop</p>
 </html>
