--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <p>did you now anything about the code?</p>
 <p> why do i need you</p>
 <p> dpoppipop</p>
-<p> feature 1</p>
+<p> feature A</p>
+<P> ADDED feature A</p>
 </html>
